<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".ForgotPasswordActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.087893866" />

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.4">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/password_recovery_prompt" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email_layout"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                app:helperText=" "
                app:helperTextEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_code_layout"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_email_layout"
                android:layout_alignParentBottom="false"
                android:layout_marginBottom="5dp"
                android:hint="Verification Code"
                app:helperText=" "
                app:helperTextEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_send"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignParentRight="true"
                android:minWidth="20dp"
                android:minHeight="0dp"
                android:onClick="onClick"
                android:text="send" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password_layout"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_code_layout"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:visibility="gone"
                app:helperText=" "
                app:helperTextEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password2_layout"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_password_layout"
                android:layout_marginBottom="10dp"
                android:hint="@string/confirm_password"
                android:visibility="gone"
                app:helperText=" "
                app:helperTextEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_reset_password"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_password2_layout"
                android:layout_marginBottom="5dp"
                android:enabled="false"
                android:onClick="onClick"
                android:text="@string/reset_passwd" />


        </RelativeLayout>

    </android.support.design.card.MaterialCardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />


</android.support.constraint.ConstraintLayout>
